--- a/app/Resources/views/desktop/index.html.twig
+++ b/app/Resources/views/desktop/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
+    {{ form_start(form ,{'action':'', 'method':'POST'}) }}
+    {{ form_widget(form) }}
+    {{ form_end(form) }}
 {% endblock %}
