--- a/app/Resources/views/desktop/thanks.html.twig
+++ b/app/Resources/views/desktop/thanks.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="content">
         <div class="wrapper-content">
-            {% include ':desktop:_contactHome.html.twig' with { 'form' : form } %}
+            <p>Gracias por contactar con nosotros</p>
         </div>
     </div>
 {% endblock %}
