--- a/app/Resources/views/desktop/_footer.html.twig
+++ b/app/Resources/views/desktop/_footer.html.twig
@@ -6,17 +6,17 @@
         <div class="info-footer">
             <div class="address-footer">
                 <h3>Direccion</h3>
-                <p>Camino de ronda, 204, Granada</p>
-                <p>asdfadsf</p>
-                <p>adsfsadf</p>
+                <p>Camino de ronda, 204, Granada<br>
+                parada de metropolitano villarejo,(situada a 200 metros)<br>
+                info@sboza2.com</p>
             </div>
             <div class="phone-footer">
-                <p> <i class="fa fa-phone" aria-hidden="true"></i> <i class="fa fa-whatsapp" aria-hidden="true"></i> Pîdenos información</p>
-                <p>654 468 158</p>
+                <p> <i class="fa fa-phone" aria-hidden="true"></i> <i class="fa fa-whatsapp" aria-hidden="true"></i> Pîdenos información:<br><a href="tel:+34654468158"><span class="phone">654 468 158</span></a></p>
+
             </div>
         </div>
         <div class="copyright">
-            <p>agfsadfsadfsadfsdfsdafds</p>
+            <p>escuela de dibujo y artes visuales sboza2 | 2016 Aviso Legal y Política de Privacidad · Ley de Cookies </p>
         </div>
     </div>
 </footer>
