--- a/app/Resources/views/desktop/index.html.twig
+++ b/app/Resources/views/desktop/index.html.twig
@@ -3,7 +3,13 @@
 {% block content %}
     <div class="content">
         <div class="wrapper-content">
+            <div class="info">
+                <h1>Perdonad las molestias</h1>
+                <h3>web en contrucción</h3>
+                <h2>Nuestro programador ha ido a por tabaco</h2>
+            </div>
             {% include ':desktop:_contactHome.html.twig' with { 'form' : form } %}
+
         </div>
     </div>
 {% endblock %}
