--- a/app/Resources/views/desktop/_contactHome.html.twig
+++ b/app/Resources/views/desktop/_contactHome.html.twig
@@ -6,7 +6,7 @@
         <div class="wrapper-form">
             <div class="text-form">
                 <h2>Contacto</h2>
-                <h3>UNA ATENCIÓN PERSONALIZADA</h3>
+                <h3 class="text-title-form">UNA ATENCIÓN PERSONALIZADA</h3>
                 <p>Si deseas recibir más información sobre un área específica de nuestra formación
                     puedes ponerte en contacto con nosotros a través del siguiente formulario.</p>
             </div>
@@ -16,9 +16,9 @@
 
             <div class="footer-form">
                 <ul>
-                    <li><p class="icon"><i class="fa fa-clock-o" aria-hidden="true"></i></p> <p class="text">Horario de atención<br/>De Lunes a Viernes, de 10:00 a 14:00 y de 16:00 a 22:00 h.</p> </li>
-                    <li><p class="icon"><i class="fa fa-phone" aria-hidden="true"></i></p> <p class="text">953 080 666 - 669 970 256</p></li>
-                    <li><p class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></p> <p class="text">Camino de ronda, 204, granada<br>parada de metropolitano villarejo,(situada a 200 metros)</p></li>
+                    <li><p class="icon"><img src="{{ asset('sboza2/img/icons/Icono 2-01.svg') }}"></p> <p class="text">Horario de atención<br/>De Lunes a Viernes, de 10:00 a 14:00 y de 16:00 a 22:00 h.</p> </li>
+                    <li><p class="icon"><img src="{{ asset('sboza2/img/icons/Icono 2-02.svg') }}"></p> <p class="text">953 080 666 - 669 970 256</p></li>
+                    <li><p class="icon"><img src="{{ asset('sboza2/img/icons/Icono 2-03.svg') }}"></p> <p class="text">Camino de ronda, 204, granada<br>parada de metropolitano villarejo,(situada a 200 metros)</p></li>
                     </li>
                 </ul>
             </div>
