--- a/app/Resources/views/desktop/_footer.html.twig
+++ b/app/Resources/views/desktop/_footer.html.twig
@@ -6,9 +6,9 @@
         <div class="info-footer">
             <div class="address-footer">
                 <h3>Direccion</h3>
-                <p>Camino de ronda, 204, Granada<br>
+                <p><strong>Camino de ronda, 204, Granada</strong><br>
                 parada de metropolitano villarejo,(situada a 200 metros)<br>
-                info@sboza2.com</p>
+                <a href="mailto:info@sboza2.com"> <strong>info@sboza2.com</strong></a></p>
             </div>
             <div class="phone-footer">
                 <p> <i class="fa fa-phone" aria-hidden="true"></i> <i class="fa fa-whatsapp" aria-hidden="true"></i> Pîdenos información:<br><a href="tel:+34654468158"><span class="phone">654 468 158</span></a></p>
