--- a/app/Resources/views/desktop/_header.html.twig
+++ b/app/Resources/views/desktop/_header.html.twig
@@ -4,7 +4,7 @@
             <div class="info-header">
                 <a class="link-email" href="mailto:info@sboza2.com">info@sboza2.com</a>
                 <span>
-                    <i class="fa fa-phone" aria-hidden="true"></i> <i class="fa fa-whatsapp" aria-hidden="true"></i> pidenos más informacion <a href="tel:+34654468158"><span class="phone">654 468 158</span></a>
+                    <img src="{{ assets('sboza2/img/icons/') }}" <i class="fa fa-whatsapp" aria-hidden="true"></i> pidenos más informacion <a href="tel:+34654468158"><span class="phone">654 468 158</span></a>
                 </span>
             </div>
             <div class="social-header">
@@ -30,9 +30,13 @@
                                 'Sunday'   : 'Domingo'
                                 })}}</span>
                 <a href="#">campus</a>
-                <ul>
-                    <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
-                </ul>
+                <div class="social-networks">
+                    <img src="{{ asset('sboza2/img/social-networks/facebook.png') }}" alt="Facebook" title="Facebook">
+                    <img src="{{ asset('sboza2/img/social-networks/twitter.png') }}" alt="Facebook" title="Facebook">
+                    <img src="{{ asset('sboza2/img/social-networks/link.png') }}" alt="Facebook" title="Facebook">
+                    <img src="{{ asset('sboza2/img/social-networks/instagram.png') }}" alt="Facebook" title="Facebook">
+                    <img src="{{ asset('sboza2/img/social-networks/be.png') }}" alt="Facebook" title="Facebook">
+                </div>
             </div>
         </div>
     </div>
