--- a/app/Resources/views/desktop/thanks.html.twig
+++ b/app/Resources/views/desktop/thanks.html.twig
@@ -3,7 +3,14 @@
 {% block content %}
     <div class="content">
         <div class="wrapper-content">
-            <p>Gracias por contactar con nosotros</p>
+            <div class="info">
+                <h1>su mensaje se ha enviado correctamente</h1>
+                <h3>nos pondremos en contacto con usted lo antes posible</h3>
+                <br>
+                <p class="logo-thanks">
+                    <img src="{{ asset('sboza2/img/tipcorrecto.png') }}">
+                </p>
+            </div>
         </div>
     </div>
 {% endblock %}
