--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,6 +9,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         <link href="{{ asset('sboza2/css/font-awesome.min.css') }}" rel="stylesheet" />
         <link href="{{ asset('sboza2/css/styles.css') }}" rel="stylesheet" />
+        <link href="{{ asset('sboza2/css/responsive.css') }}" rel="stylesheet" />
     </head>
     <body>
         {% block header %}
