--- a/app/Resources/views/desktop/_footer.html.twig
+++ b/app/Resources/views/desktop/_footer.html.twig
@@ -1,3 +1,4 @@
+<div>
 <footer class="footer">
     <div class="wrapper-content">
         <div class="logo-footer">
@@ -11,7 +12,7 @@
                 <a href="mailto:info@sboza2.com"> <strong>info@sboza2.com</strong></a></p>
             </div>
             <div class="phone-footer">
-                <p> <i class="fa fa-phone" aria-hidden="true"></i> <i class="fa fa-whatsapp" aria-hidden="true"></i> Pîdenos información:<br><a href="tel:+34654468158"><span class="phone">654 468 158</span></a></p>
+                <p> <img src="{{ asset('sboza2/img/icons/Icono-2-05.png') }}"><img src="{{ asset('sboza2/img/icons/Icono 2-04.svg') }}"> P&iacute;denos información:<br><a href="tel:+34669970256"><span class="phone">669 970 256</span></a></p>
 
             </div>
         </div>
@@ -20,3 +21,4 @@
         </div>
     </div>
 </footer>
+</div>
