--- a/app/Resources/views/desktop/_header.html.twig
+++ b/app/Resources/views/desktop/_header.html.twig
@@ -4,7 +4,7 @@
             <div class="info-header">
                 <a class="link-email" href="mailto:info@sboza2.com">info@sboza2.com</a>
                 <span>
-                    <img src="{{ assets('sboza2/img/icons/') }}" <i class="fa fa-whatsapp" aria-hidden="true"></i> pidenos más informacion <a href="tel:+34654468158"><span class="phone">654 468 158</span></a>
+                    <img src="{{ asset('sboza2/img/icons/Icono-2-05.png') }}"><img src="{{ asset('sboza2/img/icons/Icono 2-04.svg') }}"> pidenos más informacion <a href="tel:+34669970256"><span class="phone">669 970 256</span></a>
                 </span>
             </div>
             <div class="social-header">
@@ -29,13 +29,13 @@
                                 'Saturday' : 'Sabado',
                                 'Sunday'   : 'Domingo'
                                 })}}</span>
-                <a href="#">campus</a>
+                <a class="campus-header" href="#">campus</a>
                 <div class="social-networks">
-                    <img src="{{ asset('sboza2/img/social-networks/facebook.png') }}" alt="Facebook" title="Facebook">
-                    <img src="{{ asset('sboza2/img/social-networks/twitter.png') }}" alt="Facebook" title="Facebook">
-                    <img src="{{ asset('sboza2/img/social-networks/link.png') }}" alt="Facebook" title="Facebook">
-                    <img src="{{ asset('sboza2/img/social-networks/instagram.png') }}" alt="Facebook" title="Facebook">
-                    <img src="{{ asset('sboza2/img/social-networks/be.png') }}" alt="Facebook" title="Facebook">
+                    <a href="https://es-la.facebook.com/sboza2/" target="_blank" rel="nofollow"><img src="{{ asset('sboza2/img/social-networks/facebook.png') }}" alt="Facebook" title="Facebook"></a>
+                    <a href="https://twitter.com/sboza2" target="_blank" rel="nofollow"><img src="{{ asset('sboza2/img/social-networks/twitter.png') }}" alt="Twitter" title="Twitter"></a>
+                    <a href="https://www.linkedin.com/company/sboza2" target="_blank" rel="nofollow"> <img src="{{ asset('sboza2/img/social-networks/link.png') }}" alt="Linkedin" title="Linkedin"></a>
+                    <a href="https://www.instagram.com/sboza2/" target="_blank" rel="nofollow"><img src="{{ asset('sboza2/img/social-networks/instagram.png') }}" alt="Instagram" title="Instagram">
+                    <img src="{{ asset('sboza2/img/social-networks/be.png') }}" alt="Be" title="Be">
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
     <div class="header">
         <div class="wrapper-content">
             <div class="logo">
-                <img src="{{ asset('sboza2/img/logo.png') }}">
+                <a href="{{ path('homepage') }}" ><img src="{{ asset('sboza2/img/logo.png') }}"></a>
             </div>
         </div>
     </div>
