--- a/app/Resources/views/desktop/thanks.html.twig
+++ b/app/Resources/views/desktop/thanks.html.twig
@@ -3,14 +3,15 @@
 {% block content %}
     <div class="content">
         <div class="wrapper-content">
-            <div class="info">
-                <h1>su mensaje se ha enviado correctamente</h1>
-                <h3>nos pondremos en contacto con usted lo antes posible</h3>
-                <br>
+            <div class="info-thank">
+                <h3>su mensaje se ha enviado correctamente<br>
+                    nos pondremos en contacto con usted lo antes posible</h3>
                 <p class="logo-thanks">
-                    <img src="{{ asset('sboza2/img/tipcorrecto.png') }}">
+                    <i class="fa fa-thumbs-up" aria-hidden="true"></i>
                 </p>
             </div>
         </div>
     </div>
 {% endblock %}
+
+{% block footer %}{% endblock %}
