--- a/app/Resources/css/1024.less
+++ b/app/Resources/css/1024.less
@@ -26,3 +26,12 @@
     }
   }
 }
+
+@media only screen and (min-width: 1300px) {
+
+  .footer{
+    background: url('../img/bg-footer.png') repeat;
+    height: 600px;
+
+  }
+}
