changed logo header and changed footer

--- a/app/Resources/css/styles.less
+++ b/app/Resources/css/styles.less
@@ -214,8 +214,9 @@ body{
     padding: 10px;
   }
   .address-footer{
-    width: 60%;
+    width: 59%;
     display: inline-block;
+    padding-left: 13px;
     h3{
       font-family: "Bebas Neue", arial, sans-serif;
       font-size: 28px;
@@ -243,6 +244,10 @@ body{
       font-size: 25px;
       color: #fff;
     }
+  }
+
+  .copyright{
+    padding-left: 13px;
   }
 
 }
