--- a/app/Resources/views/desktop/_footer.html.twig
+++ b/app/Resources/views/desktop/_footer.html.twig
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>escuela de dibujo y artes visuales sboza2 | 2016 Aviso Legal y Política de Privacidad · Ley de Cookies </p>
+            <p>Escuela de dibujo y artes visuales sboza2 | 2016 Aviso Legal y Política de Privacidad · Ley de Cookies </p>
         </div>
     </div>
 </footer>
