--- a/app/Resources/views/desktop/_header.html.twig
+++ b/app/Resources/views/desktop/_header.html.twig
@@ -43,7 +43,7 @@
     <div class="header">
         <div class="wrapper-content">
             <div class="logo">
-                <a href="{{ path('homepage') }}" ><img src="{{ asset('sboza2/img/logo.png') }}"></a>
+                <a href="{{ path('homepage') }}" ><img src="{{ asset('sboza2/img/logo.svg') }}"></a>
             </div>
         </div>
     </div>
