created menu and header responsive

--- a/app/Resources/css/1024.less
+++ b/app/Resources/css/1024.less
@@ -1,15 +1,13 @@
 @media only screen and (max-width: 1023px) {
 
-  body{
-    overflow-x: hidden;
-  }
+
   .wrapper-content{
-    width: 100%;
-    max-width: 960px;
+    max-width: 100% !important;
+    overflow-x: hidden !important;
   }
 
   .header-top{
-    height: 73px;
+    height: 100%;
     .info-header{
       width: 100%;
       text-align: center;
