--- a/app/Resources/css/320.less
+++ b/app/Resources/css/320.less
@@ -1,4 +1,9 @@
 @media only screen and (max-width: 375px) {
+
+  .header-top-mobile{
+    text-align: center;
+  }
+
   .content {
     .content-form {
       .footer-form{
