--- a/app/Resources/views/desktop/_footer.html.twig
+++ b/app/Resources/views/desktop/_footer.html.twig
@@ -2,11 +2,11 @@
 <footer class="footer">
     <div class="wrapper-content">
         <div class="logo-footer">
-            <img src="{{ asset('sboza2/img/logo-footer.png') }}">
+            <img src="{{ asset('sboza2/img/logo-footer.svg') }}">
         </div>
         <div class="info-footer">
             <div class="address-footer">
-                <h3>Direccion</h3>
+                <h3>Direcci&oacute;n</h3>
                 <p><strong>Camino de ronda, 204, Granada</strong><br>
                 parada de metropolitano villarejo,(situada a 200 metros)<br>
                 <a href="mailto:info@sboza2.com"> <strong>info@sboza2.com</strong></a></p>
