--- a/app/Resources/css/600.less
+++ b/app/Resources/css/600.less
@@ -1,30 +1,91 @@
-@media only screen and (max-width: 620px) {
-  .wrapper-content{
+@media only screen and (max-width: 660px) {
+  .header-top-mobile{
+    display: block;
     width: 100%;
-    max-width: 400px;
-  }
+    background: #cccccc;
+    height: 100%;
+    text-align: right;
+    padding-top: 14px;
 
-  .header-top{
-    height: 125px;
-    .info-header{
-      width: 100%;
-      text-align: center;
+    i{
+      font-size: 26px;
     }
 
-    .social-header{
-      width: 100%;
-      text-align: center;
-      .social-networks{
-        display: block;
-        width: 100%;
-        margin-top: 10px;
-        img{
-          width: 24px;
-          height: 24px;
-        }
+    a{
+      text-decoration: none;
+      color: #000000;
+      font-size: 26px;
+    }
+    .header-top-content{
+      padding-right: 21px;
+    }
+
+    .social-networks{
+      display: inline-block;
+      vertical-align: middle;
+      img{
+        width: 26px;
+        height: 26px;
       }
     }
   }
+
+  .box_phone_mobile{
+    background: #cccccc;
+    font-size: 26px;
+    height: 100%;
+    a{
+      text-decoration: none;
+      color: #000000;
+      text-align: right;
+    }
+    img{
+      width: 26px;
+      height: 26px;
+    }
+  }
+
+  .box_email_mobile{
+    background: #cccccc;
+    font-size: 26px;
+    height: 100%;
+    a{
+      text-decoration: none;
+      color: #000000;
+      text-align: right;
+    }
+  }
+
+  .box_date_mobile{
+    background: #cccccc;
+    font-size: 26px;
+    height: 100%;
+    a{
+      text-decoration: none;
+      color: #000000;
+      text-align: right;
+    }
+  }
+
+  .header-top{
+    display: none;
+  }
+
+  .box_phone_mobile{
+    background: #cccccc;
+    font-size: 26px;
+    height: 100%;
+    a{
+      text-decoration: none;
+      color: #000000;
+      text-align: right;
+    }
+  }
+
+  .header-top{
+    display: none;
+  }
+
   .content {
     .content-form {
       .footer-form{
@@ -64,6 +125,7 @@
     }
     .address-footer{
       width: 100%;
+      padding: 0;
     }
     .phone-footer{
       width: 100%;
