--- a/app/Resources/css/styles.less
+++ b/app/Resources/css/styles.less
@@ -1,23 +1,63 @@
 @import 'fonts.less';
+@import "reset.less";
 
 body{
   width: 100%;
   margin: 0 auto;
   background: #aa198d;
   font-family: "HelveticaNeueLTStd Lt", arial, sans-serif;
+  overflow-x: hidden !important;
 }
+
 
 .wrapper-content{
   width: 1024px;
   margin: 0 auto;
 }
 
+.clear:before, .clear:after {
+  content: " ";
+  display: table;
+}
+
+.clear:after {
+  clear: both;
+}
+
+.clear {
+  *zoom: 1;
+}
+
+.hamburgler-menu{
+  display: none;
+}
+.hamburgler-menu-list{
+  display: none;
+}
+
+.box_email_mobile{
+  display: none;
+}
+
+.box_phone_mobile{
+  display: none;
+}
+
+.box_date_mobile{
+  display: none;
+}
+
+.header-top-mobile{
+  display: none;
+}
 
 .header-top{
   width: 100%;
   background: #cccccc;
   height: 32px;
   padding-top: 4px;
+
+
   .info-header{
     display: inline-block;
     width: 50%;
@@ -78,7 +118,48 @@ body{
   background: #aa198d;
   margin: 0 auto;
   .logo{
+    width: 20%;
     padding: 10px;
+    display: inline-block;
+  }
+
+  nav {
+    height: 40px;
+    width: 77%;
+    position: relative;
+    display: inline-block;
+  }
+
+  nav ul {
+    padding: 0;
+    margin: 0 auto;
+    width: 100%;
+    height: 40px;
+  }
+
+  nav li {
+    display: inline;
+    float: left;
+  }
+
+  nav a {
+    display: inline-block;
+    width: 100px;
+    text-align: center;
+    text-decoration: none;
+    color: #ffffff;
+  }
+
+  nav li a {
+    border-right: 1px solid #ffffff;
+  }
+
+  nav li:last-child a {
+    border-right: 0;
+  }
+
+  nav a:hover, nav a:active {
+    font-weight: bold;
   }
 }
 
@@ -131,6 +212,10 @@ body{
         .text{
           display: inline-block;
           width: 90%;
+          a{
+            text-decoration: none;
+            color: #ffffff;
+          }
         }
 
       }
@@ -228,7 +313,7 @@ body{
     }
   }
   .phone-footer{
-    width: 39%;
+    width: 38%;
     display: inline-block;
     text-align: right;
     font-weight: bold;
