--- a/app/Resources/views/desktop/index.html.twig
+++ b/app/Resources/views/desktop/index.html.twig
@@ -5,7 +5,7 @@
         <div class="wrapper-content">
             <div class="info">
                 <h1>Perdonad las molestias</h1>
-                <h3>web en contrucci&oacute;n<br>
+                <h3>web en construcci&oacute;n<br>
                 <span>Nuestro programador ha ido a por tabaco</span></h3>
             </div>
             {% include ':desktop:_contactHome.html.twig' with { 'form' : form } %}
