fixed error css.

--- a/app/Resources/css/600.less
+++ b/app/Resources/css/600.less
@@ -67,9 +67,6 @@
     }
   }
 
-  .header-top{
-    display: none;
-  }
 
   .box_phone_mobile{
     background: #cccccc;
@@ -91,7 +88,10 @@
       .footer-form{
         ul{
           .icon{
-            width: 7%;
+            width: 9%;
+          }
+          .text{
+            width: 88%;
           }
         }
       }
@@ -99,11 +99,6 @@
         .wrapper-form {
           width: 100%;
           max-width: 380px;
-          .text-form{
-            .text-title-form {
-              height: 81px;
-            }
-          }
           .form-fields {
             .field {
               width: 100%;
@@ -130,6 +125,7 @@
     .phone-footer{
       width: 100%;
       text-align: center;
+      padding-top: 20px;
     }
 
   }
