--- a/app/Resources/css/styles.less
+++ b/app/Resources/css/styles.less
@@ -198,7 +198,11 @@ body{
   .content-form{
     margin-top: 110px;
     .footer-form{
+      margin-top: 42px;
       ul{
+        li{
+          padding-top: 10px;
+        }
         list-style: none;
         padding: 0;
         .icon{
@@ -240,7 +244,7 @@ body{
             font-family: "Bebas Neue", arial, sans-serif;
             font-size: 44px;
             letter-spacing: 3px;
-            height: 20px;
+            height: 100%;
           }
         }
         .form-fields{
@@ -305,7 +309,7 @@ body{
     h3{
       font-family: "Bebas Neue", arial, sans-serif;
       font-size: 28px;
-      height: 10px;
+      height: 36px;
     }
     a{
       text-decoration: none;
