--- a/app/Resources/css/960.less
+++ b/app/Resources/css/960.less
@@ -82,6 +82,7 @@
   .hamburgler-active .hamburgler-menu {
     opacity: 1;
     pointer-events: initial;
+    max-height: 100%;
   }
 
   .hamburgler-menu-list {
@@ -90,9 +91,19 @@
     padding: 0;
     list-style-type: none;
     position: absolute;
-    top: 50%;
+    top: 148px;
     left: 50%;
-    transform: translate(-50%, -50%) scale(1.2)
+    transform: translate(-50%, -50%) scale(1.2);
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    font-size: 23px;
+    width: 100%;
+    li{
+      max-width: 100%;
+      display: block;
+      height: 31px;
+      border-bottom: 1px solid;
+    }
   }
 
   .hamburgler-active .hamburgler-menu-list {
